# Lyra

./: README.md  pyproject.toml
data/LongSpeech/: README.md  audio_convert.py  download_ID.json
data/MultiModality/: README.md
data/MultiModality/process_speech/: chattts_gen.py  prepare_speech_image_sft_data.ipynb
data/SpeechGeneration/code/: text2unit.py
data_preparation/long_speech/: README.md  audio_download.py
data_preparation/multi_modality/: README.md
data_preparation/multi_modality/process_sound/: prepare_sound_sft_data.py
data_preparation/multi_modality/process_speech/: chattts_gen.py  prepare_librispeech.py  prepare_speech_image_sft_data.ipynb  prepare_speech_sft_data.py
data_preparation/speech_generation/: README.md  generate_audio.py
examples/: movement.mov
hostfile/: hostfile_2
lyra/: conversation.py  mm_utils.py  utils.py
lyra/eval/: eval_asr_wer.py  eval_speech.py  eval_textvqa.py  m4c_evaluator.py  model_lyra_image_speech.py  model_lyra_text_speech.py
lyra/model/: builder.py  lyra_arch_qwen2vl.py  lyra_arch_qwen2vl_extractor.py
lyra/model/language_model/: lyra_qwen2vl.py  lyra_qwen2vl_extractor.py  lyra_qwen2vl_speechgenerator.py
lyra/model/multimodal_encoder/: eva_encoder.py  whisper_encoder.py
lyra/model/multimodal_generator/: generation.py  (+1 more)
lyra/serve/: cli.py  controller.py  gradio_web_server.py  model_worker.py
lyra/train/: lyra_trainer.py  train.py  train_mem.py
scripts/: merge_lora_weights.py  pred_ans.py
scripts/eval/: lyra_chartvqa_speech.sh  lyra_docvqa_speech.sh  lyra_librispeech_wer.sh  lyra_mmvet_speech.sh  lyra_textvqa_speech.sh
(+8 files in other folders)
