[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lyra"
version = "1.0.0"
description = "Lyra: An Efficient and Speech-Centric Framework for Omni-Cognition"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.1.2", "torchvision==0.16.2",
    "transformers==4.45.0", "tokenizers==0.20.0", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.34.0", "peft", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio==4.16.0", "gradio_client==0.8.1",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi==0.115.6",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.9.16", "soundfile", "torchaudio==2.1.2", "deepspeed==0.14.4",
    "flash-attn==2.6.3", "ninja", "wandb", "qwen_vl_utils", "openai-whisper", "ftfy", "numba", "jiwer", "moviepy"
]

[project.optional-dependencies]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://github.com/dvlab-research/Lyra"
"Bug Tracker" = "https://github.com/dvlab-research/Lyra/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*", "data*", "model_zoo*", "work_dirs*", "project*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*", "data*", "model_zoo*", "work_dirs*", "project*"]
